clusters/cluster0/kubernetes/apps/gregbob/biggs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: biggs
  name: biggs
  namespace: gregbob
spec:
  template:
    metadata:
      labels:
        app: biggs
    spec:
      containers:
        - image: szkud/biggslanding:latest
          imagePullPolicy: Always
          name: biggs
          ports:
          - name: biggs-port
            containerPort: 80
            protocol: TCP
          # resources:
          #   requests:
          #     memory: 350Mi
          #     cpu: 10m
          #   limits:
          #     memory: 450Mi
          #     cpu: 350m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: biggs
