clusters/cluster0/kubernetes/apps/gregbob/biggs/app/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biggs
  namespace: gregbob
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: biggs.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: biggs-service
            port:
              number: 8080
